Use Jackson introspection